# tiny-dnn

./: .gitignore
examples/caffe_converter/: CMakeLists.txt  caffe_converter.cpp
examples/get_tiny_dnn_model_from_caffe/: CMakeLists.txt  readme.md
examples/mnist/: test.cpp
tiny_dnn/: tiny_dnn.h
tiny_dnn/core/kernels/: fully_connected_op_internal.h
tiny_dnn/io/: float.h  pgm.h
tiny_dnn/layers/: layer.h
